commit summary - add image folder - remove unwanted notebooks

--- a/workshop/01-inheritance.ipynb
+++ b/workshop/01-inheritance.ipynb
@@ -19,6 +19,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objectives\n",
+    "\n",
+    "- Refresh our knowledge of inheritance and its advantages.\n",
+    "- Understand the us of `super` keyword.\n",
+    "- Introduce us to basic typing annotations.\n",
+    "- Know the differences between `issubclass`, `isinstance` and `type`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![inheritance image](../images/vehicles_classification.png \"inheritance\")\n",
+    "<small>Photo credit: https://www.python-course.eu/</small>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -44,10 +64,10 @@
     "        self.email = first + '.' + last + '@company.com'\n",
     "\n",
     "    def __repr__(self)-> str:\n",
-    "        return f\"<{self.first}, {self.last}, {self.pay}>\"\n",
+    "        return f\"{self.__class__.__name__}({self.first}, {self.last}, {self.pay})\"\n",
     "\n",
     "    def __str__(self)-> str:\n",
-    "        return f\"Employee {self.first} {self.last} makes €{self.pay}\"\n",
+    "        return f\"{self.__class__.__name__} {self.first} {self.last} makes €{self.pay}\"\n",
     "\n",
     "    def fullname(self)-> str:\n",
     "        return f\"{self.first} {self.last}\"\n",
@@ -72,7 +92,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read a csv file of employees"
+    "emp1 = Employee('Chidinma', 'Kalu', 80000)\n",
+    "emp1"
    ]
   },
   {
@@ -81,16 +102,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# read csv file of employees"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Note That__: In OOP, Inheritance signifies an *IS-A* relation.\n",
+    "\n",
+    "For Example: \n",
+    "- A manager is an Employee, \n",
+    "- A dog is an Animal,\n",
+    "- A Car is a Vehicle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Manager Class inherits from Employee\n",
     "class Manager(Employee):\n",
     "    raise_amt = 1.11\n",
     "    \n",
     "    def __init__(self, first: str, last:str, pay:int, dept:str, employees:List[str]=None):\n",
     "        super().__init__(first, last, pay)\n",
     "        self.dept = dept\n",
-    "        if employees == None:\n",
-    "            self.employees = []\n",
-    "        else:\n",
-    "            self.employees = list(employees)\n",
+    "        self.employees = list(employees) if employees else []\n",
     "    \n",
     "    def add_emps(self, emp:str)-> List[str]:\n",
     "        if emp not in self.employees:\n",
@@ -108,26 +148,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### => Create a `Developer` subclass which inherits from the `Employee` parent class.\n",
-    "- Programming Language\n",
-    "- "
+    "# read manager file\n",
+    "marketing_team = ['Sue', 'Tina', 'James', 'Diana', 'Pat', 'John']\n",
+    "man1 = Manager(\"Jane\", \"Doe\", 94000, \"Marketing\", marketing_team)\n",
+    "man1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "man1.remove_emps(\"Tina\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiple Inheritance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### What is Multiple Inheritance?"
+    "### Difference between `issubclass` and `isinstance`?\n",
+    "\n",
+    "* __issubclass__ is used to check if a class is a subclass of another class.\n",
+    "* __isinstance__ is used to check if a "
    ]
   },
   {
@@ -135,7 +185,86 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# issubclass\n",
+    "issubclass(Manager, Employee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# issubclass\n",
+    "issubclass(Employee, Manager)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# isinstance\n",
+    "isinstance(man1, Employee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# isinstance\n",
+    "isinstance(man1, Employee)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Difference between `isinstance` and `type`?\n",
+    "\n",
+    "We see that `isinstance` returns True if we compare an object either with the class it belongs to or with the superclass. Whereas the equality operator only returns True, if we compare an object with its own class.\n",
+    "\n",
+    "People make the mistake of using `type()` where `isinstance()` would have been more appropriate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(isinstance(emp1, Employee), isinstance(man1, Employee))\n",
+    "print(isinstance(emp1, Manager))\n",
+    "print(isinstance(man1, Manager))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(type(man1) == Employee, type(man1) == Manager)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### => Create a `Developer` subclass which inherits from the `Employee` parent class.\n",
+    "- Programming Language"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Takeaways"
+   ]
   }
  ],
  "metadata": {
