--- a/workshop/01-inheritance.ipynb
+++ b/workshop/01-inheritance.ipynb
@@ -174,6 +174,150 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Overwriting\n",
+    "If a function is overwritten, the original function will be gone. The function will be redefined. This process has nothing to do with object orientation or inheritance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(x):\n",
+    "    return x + 2\n",
+    "\n",
+    "print(f\"First function: {func(3)}\")\n",
+    "\n",
+    "\n",
+    "# f will be overwritten (or redefined) in the following:\n",
+    "def func(x):\n",
+    "    return x + 8\n",
+    "print(f\"Second function: {func(3)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overloading\n",
+    "\n",
+    "This refers to the ability to define a function with the same name multiple times and seeing different results depending on the number or types of the parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start(a, b=None):\n",
+    "    if b is not None:\n",
+    "        return a + b\n",
+    "    else:\n",
+    "        return a\n",
+    "    \n",
+    "print(start(a=2))\n",
+    "print(start(a=2, b=10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__The * operator can be used as a more general approach for a family of functions with 1, 2, 3 or even more parameters__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def start(*a):\n",
+    "    if len(a) == 1:\n",
+    "        return a[0]\n",
+    "    elif len(a) == 2:\n",
+    "        return a[0] + a[1]\n",
+    "    else:\n",
+    "        return a[0] + a[1] + a[2]\n",
+    "    \n",
+    "print(start(2))\n",
+    "print(start(2, 10))\n",
+    "print(start(2, 10, 13))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overriding\n",
+    "\n",
+    "Overriding refers to having a method with the same name in the child class as in the parent class. The definition of the method differs in parent and child classes but the name remains the same.\n",
+    "\n",
+    "Overriding means that the first definition will not be available anymore."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def func(n):\n",
+    "    return n + 10\n",
+    " \n",
+    "def func(n,m):\n",
+    "    return n + m + 10\n",
+    "\n",
+    "print(func(3, 4))\n",
+    "print(func(2)) #This will throw an error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Vehicle:\n",
+    "    def print_details(self):\n",
+    "        print(\"This is parent Vehicle class method\")\n",
+    "\n",
+    "class Car(Vehicle):\n",
+    "    def print_details(self):\n",
+    "        print(\"This is child Car class method\")\n",
+    "\n",
+    "class Bike(Vehicle):\n",
+    "    def print_details(self):\n",
+    "        print(\"This is child Bike class method\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car1 = Vehicle()\n",
+    "car1.print_details()\n",
+    "\n",
+    "car2 = Car()\n",
+    "car2.print_details()\n",
+    "\n",
+    "car3 = Bike()\n",
+    "car3.print_details()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Difference between `issubclass` and `isinstance`?\n",
     "\n",
     "* __issubclass__ is used to check if a class is a subclass of another class.\n",
@@ -256,7 +400,7 @@
    "metadata": {},
    "source": [
     "#### => Create a `Developer` subclass which inherits from the `Employee` parent class.\n",
-    "- Programming Language"
+    "- Programming Language(s)"
    ]
   },
   {
