commit summary - minor edits + spell checks - add solution to 3rd notebook

--- a/workshop/01-inheritance.ipynb
+++ b/workshop/01-inheritance.ipynb
@@ -25,7 +25,7 @@
     "### Objectives\n",
     "\n",
     "- Refresh our knowledge of inheritance and its advantages.\n",
-    "- Understand the us of `super` keyword.\n",
+    "- Understand the use of `super` keyword.\n",
     "- Introduce us to basic typing annotations.\n",
     "- Know the differences between `issubclass`, `isinstance` and `type`."
    ]
@@ -44,7 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List"
+    "from typing import List\n",
+    "import datetime\n",
+    "import csv"
    ]
   },
   {
@@ -61,16 +63,17 @@
     "        self.first = first\n",
     "        self.last = last\n",
     "        self.pay = pay\n",
-    "        self.email = first + '.' + last + '@company.com'\n",
+    "        self.email = first.lower() + '.' + last.lower() + '@company.com'\n",
+    "        \n",
+    "    @property\n",
+    "    def fullname(self)-> str:\n",
+    "        return f\"{self.first} {self.last}\"\n",
     "\n",
     "    def __repr__(self)-> str:\n",
     "        return f\"{self.__class__.__name__}({self.first}, {self.last}, {self.pay})\"\n",
     "\n",
     "    def __str__(self)-> str:\n",
-    "        return f\"{self.__class__.__name__} {self.first} {self.last} makes €{self.pay}\"\n",
-    "\n",
-    "    def fullname(self)-> str:\n",
-    "        return f\"{self.first} {self.last}\"\n",
+    "        return f\"{self.fullname} - {self.email} makes €{self.pay}\"\n",
     "\n",
     "    def apply_raise(self)-> float:\n",
     "        return self.pay * self.raise_amt\n",
@@ -83,7 +86,12 @@
     "    def is_weekday(day):\n",
     "        if day.weekday() == 5 or day.weekday() == 6:\n",
     "            return False\n",
-    "        return True"
+    "        return True\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def from_csv(cls, row):\n",
+    "        first, last, pay = row\n",
+    "        return cls(first, last, pay)"
    ]
   },
   {
@@ -92,8 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emp1 = Employee('Chidinma', 'Kalu', 80000)\n",
-    "emp1"
+    "emp1 = Employee('Chidinma', 'Kalu', 85000)\n",
+    "emp1.__repr__()"
    ]
   },
   {
@@ -102,14 +110,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read csv file of employees"
+    "Employee.set_raise_amt(1.05)\n",
+    "Employee.raise_amt\n",
+    "day = datetime.date(2019, 12, 25)\n",
+    "Employee.is_weekday(day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read csv file of employees\n",
+    "with open('../data/employee_file.csv', 'r') as employee_file:\n",
+    "    csv_reader = csv.reader(employee_file, delimiter=',')\n",
+    "    line_count = 0\n",
+    "    for row in csv_reader:\n",
+    "        if line_count == 0:\n",
+    "            line_count += 1\n",
+    "        else:\n",
+    "            emp = Employee.from_csv(row)\n",
+    "            line_count += 1\n",
+    "            print(f\"emp_{line_count} = {emp.__repr__()}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Note That__: In OOP, Inheritance signifies an *IS-A* relation.\n",
+    "__Note That__: In OOP, Inheritance signifies an ***IS-A*** relation.\n",
     "\n",
     "For Example: \n",
     "- A manager is an Employee, \n",
@@ -321,7 +351,7 @@
     "### Difference between `issubclass` and `isinstance`?\n",
     "\n",
     "* __issubclass__ is used to check if a class is a subclass of another class.\n",
-    "* __isinstance__ is used to check if a "
+    "* __isinstance__ is used to check if an object is an instance of another class or any of its subclass(es)."
    ]
   },
   {
@@ -331,17 +361,8 @@
    "outputs": [],
    "source": [
     "# issubclass\n",
-    "issubclass(Manager, Employee)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# issubclass\n",
-    "issubclass(Employee, Manager)"
+    "print(issubclass(Manager, Employee))\n",
+    "print(issubclass(Employee, Manager))"
    ]
   },
   {
@@ -351,17 +372,8 @@
    "outputs": [],
    "source": [
     "# isinstance\n",
-    "isinstance(man1, Employee)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# isinstance\n",
-    "isinstance(man1, Employee)"
+    "print(isinstance(man1, Employee))\n",
+    "print(isinstance(emp1, Manager))"
    ]
   },
   {
