--- a/workshop/02-multiple-inheritance.ipynb
+++ b/workshop/02-multiple-inheritance.ipynb
@@ -70,10 +70,11 @@
     "        return f\"I am {self.name} and I live in the sea.\"\n",
     "        \n",
     "    def swim(self):\n",
-    "        return f\"{self.name.title()} can swim.\"\n",
+    "        return f\"{self.name.title()} can swim\"\n",
     "    \n",
     "fish = Acquatic(\"whale\")\n",
-    "fish.swim()"
+    "fish.swim()\n",
+    "print(fish)"
    ]
   },
   {
@@ -93,11 +94,12 @@
     "        return f\"I am {self.name} and I live on the land\"\n",
     "        \n",
     "    def walk(self):\n",
-    "        return f\"{self.name.title()} can walk.\"\n",
+    "        return f\"{self.name.title()} can walk\"\n",
     "    \n",
     "\n",
     "hippo = Terrestrial(\"Hippopotamus\")\n",
-    "hippo.walk()"
+    "hippo.walk()\n",
+    "print(hippo)"
    ]
   },
   {
